[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opacus_fl"
version = "1.0.0"
description = "Sample-level Differential Privacy with Opacus in Flower"

dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "opacus==v1.4.1",
    "wandb", 
    "toml"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "opacus_fl.server_app:app"
clientapp = "opacus_fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 500
target-delta = 1e-5
max-grad-norm = 1.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.25

[train-settings]
fraction-fit = 0.5
private = true
wandb_log = false